[feature] generic declarations to org.exist.util.hashtable
thanks to Paul Murray

svn path=/trunk/eXist/; revision=11327


Former-commit-id: 2d822894b8f374cb011b8aa8d541b166d5dc9349